fix widget z-index issue

--- a/scss/components/_widget.scss
+++ b/scss/components/_widget.scss
@@ -4,12 +4,12 @@
     position:fixed;
     bottom:0;
     right:0;
-    z-index: 1050;
+    z-index: 2147483000;
     min-height:0;
     .btn{
         background: #D8B17A;
         padding:8px 12px;
-        @include font(15px,23px,400);
+        @include font(15px,20px,400);
         // display: flex;
         text-align: center;
         display: inline-block;
@@ -23,7 +23,7 @@
             min-width: 145px;
             position:absolute;
             right: 135px;
-            bottom: 32px;
+            bottom: 35px;
             @include upto-tablet{
                 &:hover, &:focus{
                     background-color: #D8B17A;
